Refactor backend API, DB paths, and user manager
Reorganize backend code and databases: move weather_data.py into en_cours/backend/API/, add aqi_data.py, and update .gitignore to ignore API/DATABASES caches and API_KEY.py. Change weather DB path to en_cours/backend/DATABASES/weather.sqlite, add user_id handling (extracted from locations.json) and persist user_id in the weather_forecast table; adjust save_weather_data signature and insertion accordingly. Add new SQLite DB files (users.sqlite, weather.sqlite) and archive USER_VARIABLES.py. Remove temp.json and add a placeholder innit.py (infinite loop). Rename users.py to user_manager.py, update DB_PATH to the DATABASES folder, reorder initialization, improve create_user to check by username/email and handle duplicates, and comment out automatic manager instantiation.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /en_cours/CNN/__pycache__
 /en_cours/backend/__pycache__
-/en_cours/backend/private
+/en_cours/backend/API/__pycache__
+/en_cours/backend/DATABASES/__pycache__
+/en_cours/backend/API/API_KEY.py
