Add frontend console; enable CORS; remove DBs
Add a small frontend request console (index.html, app.js, styles.css) for sending JSON POSTs (create_user, update_settings, update_weather) to the auth endpoint. Enable CORS in the backend by adding Access-Control-Allow-* headers to _send_json and implementing an OPTIONS handler on AuthRequestHandler so the browser can call the API. Remove committed SQLite DB binaries (users.sqlite, weather.sqlite) and update .gitignore to ignore /en_cours/backend/libs/__pycache__.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /en_cours/backend/API/__pycache__
 /en_cours/backend/DATABASES/__pycache__
 /en_cours/backend/API/API_KEY.py
+/en_cours/backend/libs/__pycache__
