Add docstrings and update .gitignore
Add thorough docstrings and small defensive tweaks across backend modules and update .gitignore to ignore generated caches and API_KEY copies. Changes touch sources/backend/API/weather_data.py (added docstrings for parameter building, AQI handling, parsing helpers, DB helpers, and save/update flows), sources/backend/init.py (JSON body handling, CORS responses, location parsing and handler docstrings, minor read-once fix), sources/backend/libs/reversegeocoding.py (constructor and query docs, connection cleanup), and .gitignore (added /sources/* cache and API_KEY ignores). These changes improve code documentation, clarify return types and args, and tighten input handling without altering core logic.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 /en_cours/backend/DATABASES/__pycache__
 /en_cours/backend/API/API_KEY.py
 /en_cours/backend/libs/__pycache__
+
+/sources/CNN/__pycache__
+/sources/backend/__pycache__
+/sources/backend/API/__pycache__
+/sources/backend/DATABASES/__pycache__
+/sources/backend/API/API_KEY.py
+/sources/backend/libs/__pycache__
